# Stelliberty

./: .gitignore  LICENSE  README.md  README_zh-CN.md  pubspec.yaml
.github/docs/: README.zh-CN.md
.github/workflows/: beta-build.yml  build-release.yml
lib/: main.dart
lib/atomic/: permission_checker.dart
lib/clash/config/: clash_defaults.dart  config_injector.dart
lib/clash/core/: service_state.dart
lib/clash/data/: clash_model.dart  log_message_model.dart  provider_model.dart  subscription_model.dart
lib/clash/manager/: config_manager.dart  lifecycle_manager.dart  manager.dart  process_manager.dart
lib/clash/model/: subscription_model.dart
lib/clash/network/: api_client.dart  ipc_request_helper.dart
lib/clash/providers/: clash_provider.dart  connection_provider.dart  core_log_provider.dart  override_provider.dart  service_provider.dart  subscription_provider.dart  traffic_provider.dart
lib/clash/services/: core_log_service.dart  core_update_service.dart  log_service.dart  override_service.dart  process_service.dart  subscription_service.dart  traffic_monitor.dart
lib/dev_test/: ipc_api_test.dart  override_test.dart  test_manager.dart  validation_test.dart
lib/i18n/locales/: en.json  (+2 more)
lib/providers/: app_update_provider.dart
lib/services/: auto_start_service.dart  backup_service.dart
lib/storage/: clash_preferences.dart  dev_preferences.dart
lib/theme/: dynamic_theme.dart
lib/tray/: tray_event.dart  tray_manager.dart
lib/ui/: basic.dart
macos/Runner.xcodeproj/: project.pbxproj
native/hub/: Cargo.toml
native/hub/src/: clash.rs  coordinator.rs
native/hub/src/atoms/: network_interfaces.rs  system_proxy.rs
native/hub/src/atoms/network_interfaces/: detector.rs
native/hub/src/atoms/override_processor/: js_executor.rs
native/hub/src/atoms/system_proxy/: manager.rs
native/hub/src/clash/: core_updater.rs  service.rs  subscription.rs
native/hub/src/clash/config/: injector.rs  runtime_params.rs
native/hub/src/clash/network/: handlers.rs
native/hub/src/clash/subscription/: parser.rs  validator.rs
native/hub/src/coordinator/: clash_coordinator.rs  system_coordinator.rs
native/hub/src/molecules/: clash_config.rs  clash_network.rs  clash_process.rs  core_update.rs  delay_testing.rs  override_processing.rs  subscription_management.rs  system_operations.rs
native/hub/src/molecules/clash_config/: generator.rs  injector.rs
native/hub/src/molecules/clash_network/: connection.rs  handlers.rs  ws_client.rs
native/hub/src/molecules/clash_process/: process_manager.rs  service_manager.rs
native/hub/src/molecules/core_update/: updater.rs
native/hub/src/molecules/delay_testing/: tester.rs
native/hub/src/molecules/override_processing/: downloader.rs  js_executor.rs  processor.rs
native/hub/src/molecules/subscription_management/: downloader.rs  parser.rs
native/hub/src/molecules/system_operations/: app_update.rs  auto_start.rs  backup.rs  loopback.rs  url_launcher.rs
native/hub/src/services/: path_service.rs
native/hub/src/system/: auto_start.rs  backup.rs
native/stelliberty_service/: Cargo.toml
native/stelliberty_service/src/: lib.rs
native/stelliberty_service/src/clash/: manager.rs
native/stelliberty_service/src/ipc/: server.rs
native/stelliberty_service/src/service/: handler.rs  installer.rs  runner.rs
scripts/: build.dart  prebuild.dart
windows/runner/: flutter_window.cpp
(+67 files in other folders)
