[package]
# Do not change the name of this crate.
name = "hub"
version = "1.0.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "^8.7.2"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
serde_yaml_ng = "^0.10.0"
boa_engine = "^0.21.0"
base64 = "^0.22.1"
url = "^2.5.7"
urlencoding = "^2.1.3"
tokio = { version = "^1.48.0", features = ["rt", "macros", "time", "net", "io-util"] }
tokio-tungstenite = "^0.28"
futures-util = "^0.3"
async-trait = "^0.1.89"
httparse = "^1.10"
http = "^1.3"
messages = "^0.3.1"
log = "^0.4.28"
env_logger = "^0.11.8"
once_cell = "^1.21.3"
chrono = "^0.4.39"
network-interface = "^2.0.3"
auto-launch = "^0.5.0"
rand = "^0.9"
command-group = "^5.0.1"  # 进程组管理
stelliberty-service = { path = "../stelliberty_service" }
anyhow = "^1.0"
regex = "^1.12.2"
webbrowser = "^1.0.6"
reqwest = { version = "^0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "^0.30.1", features = ["signal", "process", "user"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.62.2", features = [
    "Win32_Networking_WinInet",
    "Win32_Foundation",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
winapi = { version = "^0.3.9", features = ["winbase", "processthreadsapi", "jobapi2", "handleapi", "synchapi", "winuser"] }
windows-sys = { version = "^0.61.2", features = ["Win32_Foundation"] }
encoding_rs = "^0.8.35"
windows-service = "^0.8"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "^0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "^0.2.100"
